Fixed Logo alignment and made quotes slide in

--- a/assets/css/styles.sass
+++ b/assets/css/styles.sass
@@ -46,6 +46,8 @@ header
       margin-bottom: 10px
     h2
       margin-bottom: 15px
+    img
+      width: 95%
 
 /*----------------
  * 	Hero Section
